<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.withullc.app.withu.Login">

    <CheckBox
        android:id="@+id/login_rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_from_input_container" />

    <Button
        android:id="@+id/login_submit_button"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:stateListAnimator="@null"
        android:background="@drawable/button_rounded_blue"
        android:onClick="logIn"
        android:text="@string/login_submit_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_rememberMe" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:hint="@string/example_email"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/login_rememberMe"
            app:layout_constraintHorizontal_bias="0.647"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_from_input_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/login_email_layout"
        app:layout_constraintStart_toStartOf="@+id/login_email_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_email_layout"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/login_rememberMe"
            app:layout_constraintHorizontal_bias="0.647"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_forgot_pass_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:stateListAnimator="@null"
        android:background="@drawable/button_rounded_hollow_accented_primary"
        android:onClick="forgotPassword"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_submit_button" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_spinner_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:visibility="gone">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/login_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="10dp"
            app:SpinKit_Color="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26999998" />

        <ImageView
            android:id="@+id/login_spinner_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/cast_intro_overlay_background_color" />

        <TextView
            android:id="@+id/login_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            android:ems="10"
            android:text="@string/login_spinner_label"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_spinner" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
